...
        switch self {
        case .summary:
            return "Summary"
        case .activity:
            return "Activity"
        case .workouts:
            return "Workouts"
        case .health:
            return "Health"
        }
    }
}

...
